Cleaned up dependencies. Had to change the code slightly for this.